--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
       
   </head>
 
-<body>
+<body bgcolor="aqua">
+  <img src="flower.jpg">
   
-  <h3>Carousel</h3>
+  <h1>Carousel</h1>
 
    <div id="mycarousel" class="carousel slide" data-ride="carousel">
 <ol class="carousel-indicators">
